--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,33 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+}
+
+.left-side
+{
+  display: flex;
+  justify-content: left;
+  padding-left: 8px;
+  margin-right: auto;
+}
+
+.right-side
+{
+  display: flex;
+  justify-content: right;
+  padding: 0px;
+  margin: 0px;
+  padding-right: 8px;
+  gap: 16px;
+
+}
+
+.links
+{
+  display: flex;
+  gap: 16px;
 }
 
 .profile-image {
@@ -20,6 +47,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+
 }
 
 .logo {
