Solve flex-exercise 4

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,16 +1,42 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  /* text-align: center; */
 }
 
 img {
   width: 100px;
   height: 100px;
+
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 52px;
 }
+
+.imgs
+{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.ig
+{
+  /* display: flex;
+  flex-direction: column; */
+  text-align: center;
+  flex-basis: 200px;
+}
+
+ .text
+ {
+   text-align: center;
+ }
+
+
 
 /* do not edit this footer */
 .footer {
