--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 6px;
 }
 
 input {
@@ -24,4 +27,54 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+li
+{
+  list-style-type: none;
+}
+
+a 
+{
+  text-decoration: none;
+  color: grey;
+}
+
+.header
+{
+  display: flex;
+  padding: 4px;
+}
+
+.left-links
+{
+  margin-right: auto;
+  padding: 0px;
+  margin-left: 12px;
+}
+
+.right-links
+{
+  padding-right: 12px;
+}
+
+.left-links, .right-links
+{
+  display: flex;
+  gap: 12px;
+}
+
+
+.content
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: auto;
+}
+
+.footer
+{
+  display: flex;
+  background-color: #eeeeee;
 }
