--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,13 +1,20 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  min-height: 100vh;
+  /* min-height: 100vh;
+  display: flex;
+  flex-direction: column; */
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
@@ -26,4 +33,56 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+
+/** Sidebar **/
+li
+{
+  list-style-type: none;
+}
+
+a
+{
+  text-decoration: none;
+  color: white;
+}
+
+.sidebar{
+  display: flex;
+  font-size: 24px;
+  min-width: 300px;
+ }
+
+
+/** Cards **/
+.card
+{
+  display: flex;
+  max-width: 300px;
+  padding: 12px;
+}
+
+.cards
+{
+  /* margin-left: 350px; */
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+.middle
+{
+  display: flex;
+  min-height: 100vh;
+}
+
+/** Footer **/
+
+.footer
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
