--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,10 +5,15 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template-rows: 80px 80px 400px 80px;
+  grid-template-columns: 350px 1050px;
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  row-gap: 15px;
+  column-gap: 15px;
 }
 
 .container div {
@@ -22,10 +27,14 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-row: 2 / 4;
+
 }
 
 .nav {
@@ -34,10 +43,14 @@ html {
 
 .article {
   background-color: #7E1DC3;
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .article p {
