--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  column-gap: 4px;
 }
 
 .container div {
@@ -15,8 +18,15 @@
   color: white;
 }
 
+.logo
+{
+  text-align: left;
+}
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .menu ul,
@@ -88,4 +98,13 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;
+}
+
+/***/
+.menu ul 
+{
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4, 0.5fr);
+  text-align: right;
 }
