--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,6 +7,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-template-rows: 0.1fr 0.15fr 3fr 0.25fr;
   column-gap: 4px;
 }
 
@@ -113,3 +114,28 @@
 {
   grid-column: 1 / 3;
 }
+
+.sidebar
+{
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-rows: repeat(4,1.5fr);
+  row-gap: 50px;
+}
+
+.nav ul
+{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+/* 
+.article
+{
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+} */
