--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -132,10 +132,16 @@
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 }
-/* 
+
 .article
 {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-} */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  column-gap: 15px;
+  row-gap: 15px;
+}
+
+.card
+{
+  height: 200px;
+}
